# verify-claims

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: test.yml
commands/: verify.md
config/: default_config.json
hooks/: hooks.json
scripts/: claim_parser.py  track_tool_use.py  transcript_reader.py  verify_claims.py
scripts/utils/: __init__.py  config.py  logger.py  state.py
scripts/verifiers/: __init__.py  base.py  build_checker.py  command_detection.py  file_exists.py  git_diff.py  lint_checker.py  test_runner.py
tests/: __init__.py  conftest.py  test_claim_parser.py  test_command_detection.py  test_config.py  test_integration.py  test_logger.py  test_state.py  test_transcript_reader.py  test_verifiers.py
